[puppet] Typo: correct master certs

--- a/modules/puppet/templates/puppetmaster.erb
+++ b/modules/puppet/templates/puppetmaster.erb
@@ -1,3 +1,4 @@
+# <%= @fqdn %> (<%= @operatingsystem %> -- <%= @lsbdistcodename %>)
 # you probably want to tune these settings
 PassengerHighPerformance on
 PassengerMaxPoolSize 12
@@ -14,8 +15,8 @@ Listen 8140
         SSLProtocol -ALL +SSLv3 +TLSv1
         SSLCipherSuite ALL:!ADH:RC4+RSA:+HIGH:+MEDIUM:-LOW:-SSLv2:-EXP
 
-        SSLCertificateFile      /var/lib/puppet/ssl/certs/graphene-14-kavlan-5.nancy.grid5000.fr.pem
-        SSLCertificateKeyFile   /var/lib/puppet/ssl/private_keys/graphene-14-kavlan-5.nancy.grid5000.fr.pem
+        SSLCertificateFile      /var/lib/puppet/ssl/certs/<%= @fqdn %>.pem
+        SSLCertificateKeyFile   /var/lib/puppet/ssl/private_keys/<%= @fqdn %>.pem
         SSLCertificateChainFile /var/lib/puppet/ssl/certs/ca.pem
         SSLCACertificateFile    /var/lib/puppet/ssl/certs/ca.pem
         # If Apache complains about invalid signatures on the CRL, you can try disabling
