--- a/modules/puppet/templates/client.conf.erb
+++ b/modules/puppet/templates/client.conf.erb
@@ -1,5 +1,4 @@
 # MANAGED BY PUPPET
-<% master = scope.lookupvar('master') -%>
 [main]
 logdir=/var/log/puppet
 vardir=/var/lib/puppet
@@ -7,4 +6,4 @@ ssldir=/var/lib/puppet/ssl
 rundir=/var/run/puppet
 factpath=$vardir/lib/facter
 templatedir=$confdir/templates
-server = <%= master %>
+server = <%= scope.lookupvar('masterg5k') %>
